--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Calculator</string>
+    <string name="about">About</string>
+    <string name="change_theme">Change theme</string>
+    <string name="author">Author : KirillBelitsky</string>
 </resources>
